--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
-    implementation project(':kotlinutils')
+    implementation project(':kotlinextract')
 }
