--- a/kotlinextract/src/main/AndroidManifest.xml
+++ b/kotlinextract/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.jyuesong.android.kotlin.extract"/>
+<manifest
+    package="com.jyuesong.android.kotlin.extract"/>
